feature: Collector->toList로 변경 #35